refactor: change structure of 'complete proj' section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
       </div>
     </section>
     <main>
-      <div class="section-wrapper_projects">
-        <section class="section-wrapper">
-          <div class="projects-wrapper">
-            <div class="projects__main-block">
+      <section class="projects-wrapper">
+        <div class="section-wrapper">
+            <div class="projects__left-block">
               <div class="projects__txt">
                 <h2>Completed<br><span>projects</span></h2>
                 <p>Only a small part of the work performed by our company is presented on the
@@ -104,17 +103,16 @@
                   <p>Upon request</p>
                 </div>
               </div>
-              <div class="projects__control-wrap">
-                <div class="projects__control-left-arrow"></div>
-                <div class="projects__control-dot projects__control-dot_active"></div>
-                <div class="projects__control-dot"></div>
-                <div class="projects__control-dot"></div>
-                <div class="projects__control-right-arrow"></div>
+              <div class="projects__pagination">
+                <div class="control-left-arrow"></div>
+                <span class="control-dot projects__control-dot_active"></span>
+                <span class="control-dot"></span>
+                <span class="control-dot"></span>
+                <div class="control-right-arrow"></div>
               </div>
             </div>
-          </div>
-        </section>
-      </div>
+        </div>
+      </section>
       <div class="shift-section-on-control">
         <section class="on-control">
           <div class="on-control__title">
@@ -315,50 +313,70 @@
           <div class="col">
             <img src="./assets/img/types-repair-img-1.png" alt="types-repair-img-1">
             <div class="col__txt-block">
-              <h3>Redecorating</h3>
+              <h3>Mini</h3>
               <ul>
-                <li><span></span>Dismantling of old coatings</li>
-                <li><span></span>Wallpapering</li>
-                <li><span></span>Painting walls and ceilings</li>
-                <li><span></span>Laying flooring</li>
-                <li><span></span>Replacing plumbing</li>
-                <li><span></span>Replacing sockets and switches</li>
-                <li><span></span>Replacing doors</li>
+                <li><span></span>Measurement drawing</li>
+                <li><span></span>Redevelopment</li>
+                <li><span></span>Layout of furniture</li>
+                <li><span></span>Plumbing plan. equipment</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">from 900 rub / m2</a></button>
+              <button class="col__btn" type="button"><a href="#">150 rub / m2</a></button>
             </div>
           </div>
           <div class="col">
-            <img src="./assets/img/types-repair-img-2.png" alt="types-repair-img-2">
+            <img src="./assets/img/types-repair-img-3.png" alt="types-repair-img-2">
             <div class="col__txt-block">
-              <h3>Overhaul</h3>
+              <h3>Standard</h3>
               <ul>
-                <li><span></span>Dismantling of old coatings</li>
-                <li><span></span>Wallpapering</li>
-                <li><span></span>Painting walls and ceilings</li>
-                <li><span></span>Laying flooring</li>
-                <li><span></span>Replacing plumbing</li>
-                <li><span></span>Replacing sockets and switches</li>
-                <li><span></span>Replacing doors</li>
+                <li><span></span>Measurement drawing</li>
+                <li><span></span>Redevelopment</li>
+                <li><span></span>Layout of furniture</li>
+                <li><span></span>Plan of ceilings</li>
+                <li><span></span>Floor Plan</li>
+                <li><span></span>Electricians plan</li>
+                <li><span></span>Lighting plan</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">from 1800 rub / m2</a></button>
+              <button class="col__btn" type="button"><a href="#">400 rub / m2</a></button>
             </div>
           </div>
           <div class="col">
-            <img src="./assets/img/types-repair-img-3.png" alt="types-repair-img-3">
+            <img src="./assets/img/types-repair-img-2.png" alt="types-repair-img-3">
             <div class="col__txt-block">
-              <h3>Designer Repair</h3>
+              <h3>Full</h3>
               <ul>
-                <li><span></span>Dismantling of old coatings</li>
-                <li><span></span>Wallpapering</li>
-                <li><span></span>Painting walls and ceilings</li>
-                <li><span></span>Laying flooring</li>
-                <li><span></span>Replacing plumbing</li>
-                <li><span></span>Replacing sockets and switches</li>
-                <li><span></span>Replacing doors</li>
+                <li><span></span>Measurement drawing</li>
+                <li><span></span>Redevelopment</li>
+                <li><span></span>Layout of furniture</li>
+                <li><span></span>Plan of ceilings</li>
+                <li><span></span>Floor Plan</li>
+                <li><span></span>Electricians plan</li>
+                <li><span></span>Wall reamers</li>
+                <li><span></span>3D visualization</li>
+                <li><span></span>Bill of materials</li>
+                <li><span></span>Departure for a selection of materials</li>
+                <li><span></span>Furniture selection</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">from 4000 rub / m2</a></button>
+              <button class="col__btn" type="button"><a href="#">900 rub / m2</a></button>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="steps">
+        <div class="section-wrapper">
+          <div class="steps__left-block">
+            <p class="intro-txt">How we are working</p>
+            <h2>6 steps to<br><span>the goal</span></h2>
+            <p class="pagination-counter">1/6</p>
+            <h3 class="steps__title">Departure for<br>measurements premises</h3>
+            <p class="steps__txt">After your call, we go to you to consult and measure the premises of your apartment.
+              During our meeting, you can ask absolutely any number of questions. An appraiser-appraiser leaves to
+              measure the room.</p>
+            <p class="steps__txt">He will advise you on the issues of repair technology, apartment design, terms of
+              repair of the apartment as a whole and its individual stages.</p>
+
+          </div>
+          <div class="steps__right-block">
+            <img src="./assets/img/6-steps-img.png" alt="image">
           </div>
         </div>
       </section>
