feat: 'design-projects' and 'steps-to-goal' is done

--- a/index.html
+++ b/index.html
@@ -56,61 +56,61 @@
     <main>
       <section class="projects-wrapper">
         <div class="section-wrapper">
-            <div class="projects__left-block">
-              <div class="projects__txt">
-                <h2>Completed<br><span>projects</span></h2>
-                <p>Only a small part of the work performed by our company is presented on the
-                  site.
-                  For 14 years on in the construction market we have made happy more than 1000 families
-                </p>
+          <div class="projects__left-block">
+            <div class="projects__txt">
+              <h2>Completed<br><span>projects</span></h2>
+              <p>Only a small part of the work performed by our company is presented on the
+                site.
+                For 14 years on in the construction market we have made happy more than 1000 families
+              </p>
+            </div>
+            <div class="projects__slider">
+              <ul class="projects__units">
+                <li class="projects__units-1 projects__units-1_active">Rostov-on-Don, Admiral</li>
+                <li class="projects__units-2">Sochi Thieves</li>
+                <li class="projects__units-3">Rostov-on-Don Patriotic</li>
+              </ul>
+              <ul class="projects__slider-img">
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-2"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+              </ul>
+              <div class="projects__slider-btn-next"></div>
+            </div>
+          </div>
+          <div class="projects__addition-info">
+            <div class="projects__points-wrap">
+              <div class="projects__point">
+                <p>City:</p>
+                <p>Rostov-on-Don<br>LCD admiral</p>
               </div>
-              <div class="projects__slider">
-                <ul class="projects__units">
-                  <li class="projects__units-1 projects__units-1_active">Rostov-on-Don, Admiral</li>
-                  <li class="projects__units-2">Sochi Thieves</li>
-                  <li class="projects__units-3">Rostov-on-Don Patriotic</li>
-                </ul>
-                <ul class="projects__slider-img">
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-2"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                </ul>
-                <div class="projects__slider-btn-next"></div>
+              <div class="projects__point">
+                <p>apartment area:</p>
+                <p>81 m2</p>
+              </div>
+              <div class="projects__point">
+                <p>Repair time:</p>
+                <p>3.5 months</p>
+              </div>
+              <div class="projects__point">
+                <p>Repair Cost:</p>
+                <p>Upon request</p>
               </div>
             </div>
-            <div class="projects__addition-info">
-              <div class="projects__points-wrap">
-                <div class="projects__point">
-                  <p>City:</p>
-                  <p>Rostov-on-Don<br>LCD admiral</p>
-                </div>
-                <div class="projects__point">
-                  <p>apartment area:</p>
-                  <p>81 m2</p>
-                </div>
-                <div class="projects__point">
-                  <p>Repair time:</p>
-                  <p>3.5 months</p>
-                </div>
-                <div class="projects__point">
-                  <p>Repair Cost:</p>
-                  <p>Upon request</p>
-                </div>
-              </div>
-              <div class="projects__pagination">
-                <div class="control-left-arrow"></div>
-                <span class="control-dot projects__control-dot_active"></span>
-                <span class="control-dot"></span>
-                <span class="control-dot"></span>
-                <div class="control-right-arrow"></div>
-              </div>
+            <div class="projects__pagination">
+              <div class="control-left-arrow"></div>
+              <span class="control-dot control-dot_active"></span>
+              <span class="control-dot"></span>
+              <span class="control-dot"></span>
+              <div class="control-right-arrow"></div>
             </div>
+          </div>
         </div>
       </section>
       <div class="shift-section-on-control">
@@ -373,9 +373,38 @@
               measure the room.</p>
             <p class="steps__txt">He will advise you on the issues of repair technology, apartment design, terms of
               repair of the apartment as a whole and its individual stages.</p>
-
+            <div class="steps__pagination">
+              <div class="control-left-arrow"></div>
+              <span class="control-dot control-dot_active"></span>
+              <span class="control-dot"></span>
+              <span class="control-dot"></span>
+              <span class="control-dot"></span>
+              <span class="control-dot"></span>
+              <span class="control-dot"></span>
+              <div class="control-right-arrow"></div>
+            </div>
           </div>
           <div class="steps__right-block">
+            <ul class="show-projets">
+              <li class="show-projets__item show-projets__item_1 show-projets__item_active"><span>01</span>
+                <p>Departure to<br>room measurements</p>
+              </li>
+              <li class="show-projets__item show-projets__item_2"><span>02</span>
+                <p>Compilation<br>estimates</p>
+              </li>
+              <li class="show-projets__item show-projets__item_3"><span>03</span>
+                <p>Development<br>project design</p>
+              </li>
+              <li class="show-projets__item show-projets__item_4"><span>04</span>
+                <p>Purchasing Supplies</p>
+              </li>
+              <li class="show-projets__item show-projets__item_5"><span>05</span>
+                <p>Repair finishing work</p>
+              </li>
+              <li class="show-projets__item show-projets__item_6"><span>06</span>
+                <p>Приемка-сдача<br>работ</p>
+              </li>
+            </ul>
             <img src="./assets/img/6-steps-img.png" alt="image">
           </div>
         </div>
