refactor: change layout of the 'types-repair' section

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           </div>
         </div>
       </section>
-      <div class="shift-section-on-control">
-        <section class="on-control">
+      <section class="on-control">
+        <div class="on-control__inner">
           <div class="on-control__title">
             <h2>online control</h2>
             <div class="section__title-icon"></div>
@@ -152,8 +152,8 @@
               </label>
             </fieldset>
           </form>
-        </section>
-      </div>
+        </div>
+      </section>
       <section class="types-repair section-wrapper">
         <div class="types-repair__title">
           <h2>TYPES OF REPAIR</h2>
