feat: 'team' and 'clients' sections is done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="header__content">
           <div class="header__text-wrap">
             <p class="header__title">Turnkey Repair in the<br>city of <span>Rostov-on-Don</span></p>
-            <p>Get ready-made turnkey repairs on time<br> with work time saving up to 45 days and 20% from<br> cost of
+            <p class="header__sub-title">Get ready-made turnkey repairs on time<br>with work time saving up to 45 days
+              and 20% from cost of
               materials
               due to the organization of work
             </p>
@@ -130,7 +131,7 @@
           <p class="on-control__txt">
             At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you
             can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast
-            from one of our facilities! Leave a request below and you will receive a link to the broadcast.
+            from one of our facilities!<br>Leave a request below and you will receive a link to the broadcast.
           </p>
           <form class="form">
             <div class="form__display">
@@ -173,7 +174,9 @@
                 <li><span></span>Replacing sockets and switches</li>
                 <li><span></span>Replacing doors</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">from 900 rub / m2</a></button>
+              <div class="endnote">
+                <p>from 900 rub / m2</p>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -189,7 +192,9 @@
                 <li><span></span>Replacing sockets and switches</li>
                 <li><span></span>Replacing doors</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">from 1800 rub / m2</a></button>
+              <div class="endnote">
+                <p>from 1800 rub / m2</p>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -205,7 +210,9 @@
                 <li><span></span>Replacing sockets and switches</li>
                 <li><span></span>Replacing doors</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">from 4000 rub / m2</a></button>
+              <div class="endnote">
+                <p>from 4000 rub / m2</p>
+              </div>
             </div>
           </div>
         </div>
@@ -320,7 +327,9 @@
                 <li><span></span>Layout of furniture</li>
                 <li><span></span>Plumbing plan. equipment</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">150 rub / m2</a></button>
+              <div class="endnote">
+                <p>150 rub / m2</p>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -336,7 +345,9 @@
                 <li><span></span>Electricians plan</li>
                 <li><span></span>Lighting plan</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">400 rub / m2</a></button>
+              <div class="endnote">
+                <p>400 rub / m2</p>
+              </div>
             </div>
           </div>
           <div class="col">
@@ -356,7 +367,9 @@
                 <li><span></span>Departure for a selection of materials</li>
                 <li><span></span>Furniture selection</li>
               </ul>
-              <button class="col__btn" type="button"><a href="#">900 rub / m2</a></button>
+              <div class="endnote">
+                <p>900 rub / m2</p>
+              </div>
             </div>
           </div>
         </div>
@@ -406,6 +419,128 @@
               </li>
             </ul>
             <img src="./assets/img/6-steps-img.png" alt="image">
+          </div>
+        </div>
+      </section>
+      <section class="team">
+        <div class="team__inner">
+          <div class="team__title">
+            <h2>our team</h2>
+            <div class="section__title-icon"></div>
+          </div>
+          <p class="team__title-txt">Our team has helped to become happier for more than<br>500 families and we are not
+            going to stop
+          </p>
+          <div class="team__members">
+            <div class="col">
+              <img src="./assets/img/dmitry-tulyakov.png" alt="Dmitry Tulyakov">
+              <div class="col__txt-block">
+                <h3>Dmitry Tulyakov</h3>
+                <p class="sub-title">Project manager</p>
+                <div class="endnote">
+                  <p>Work experience 8 years</p>
+                </div>
+              </div>
+              <div class="team-icon tean-icom_manager"></div>
+            </div>
+            <div class="col">
+              <img src="./assets/img/Larisa-Kotlyarova.png" alt="Larisa Kotlyarova">
+              <div class="col__txt-block">
+                <h3>Larisa Kotlyarova</h3>
+                <p class="sub-title">Designer</p>
+                <div class="endnote">
+                  <p>Work experience 6 years</p>
+                </div>
+              </div>
+              <div class="team-icon team-icon_designer"></div>
+            </div>
+            <div class="col">
+              <img src="./assets/img/Alexey-Efimov.png" alt="Alexey Efimov">
+              <div class="col__txt-block">
+                <h3>Alexey Efimov</h3>
+                <p class="sub-title">Foreman</p>
+                <div class="endnote">
+                  <p>Work experience 12 years</p>
+                </div>
+              </div>
+              <div class="team-icon team-icon_foreman"></div>
+            </div>
+          </div>
+          <p class="team__txt">
+            Each employee of our company is a qualified full-time specialist with work experience of 6 years.<br>We do
+            not
+            have laborers and guest workers, each employee carries out work corresponding to his specialty.
+          </p>
+        </div>
+      </section>
+      <section class="clients">
+        <div class="section-wrapper">
+          <div class="clients__title">
+            <h2>our clients</h2>
+            <div class="section__title-icon"></div>
+          </div>
+          <p class="client__title-txt">80% of our customers recommend us to their<br>friends and family.</p>
+          <div class="clients__gallery">
+            <div class="clients__col">
+              <div class="clients__txt-block">
+                <div class="clients__title-wrap">
+                  <div class="clients__title-icon clients__title-icon_1"></div>
+                  <h3>Fedosova Maria Konstantinovna</h3>
+                </div>
+                <p class="clients__card-txt">
+                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
+                  referred to the repair as to my own. Great thanks i express the project to georgia for its
+                  professionalism and approach. The repair process was turned out in terms, faster than anticipated.
+                  Team
+                  mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices
+                  democratic. I recommend these masters.
+                </p>
+              </div>
+              <div class="card-endnote">
+                <p class="card-endnote__left">40 m2</p>
+                <p class="card-endnote__right">48 DAYS</p>
+              </div>
+            </div>
+            <div class="clients__col">
+              <div class="clients__txt-block">
+                <div class="clients__title-wrap">
+                  <div class="clients__title-icon clients__title-icon_1"></div>
+                  <h3>Fedosova Maria Konstantinovna</h3>
+                </div>
+                <p class="clients__card-txt">
+                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
+                  referred to the repair as to my own. Great thanks i express the project to georgia for its
+                  professionalism and approach. The repair process was turned out in terms, faster than anticipated.
+                  Team
+                  mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices
+                  democratic. I recommend these masters.
+                </p>
+              </div>
+              <div class="card-endnote">
+                <p class="card-endnote__left">40 m2</p>
+                <p class="card-endnote__right">48 DAYS</p>
+              </div>
+            </div>
+            <div class="clients__col">
+              <div class="clients__txt-block">
+                <div class="clients__title-wrap">
+                  <div class="clients__title-icon clients__title-icon_1"></div>
+                  <h3>Fedosova Maria Konstantinovna</h3>
+                </div>
+                <p class="clients__card-txt">
+                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
+                  referred to the repair as to my own. Great thanks i express the project to georgia for its
+                  professionalism and approach. The repair process was turned out in terms, faster than anticipated.
+                  Team
+                  mobile and professional. Works performed qualitatively without comments. Quality satisfied. Prices
+                  democratic. I recommend these masters.
+                </p>
+              </div>
+              <div class="card-endnote">
+                <p class="card-endnote__left">40 m2</p>
+                <p class="card-endnote__right">48 DAYS</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
