refactor: change structure of form component

--- a/index.html
+++ b/index.html
@@ -134,15 +134,17 @@
             from one of our facilities!<br>Leave a request below and you will receive a link to the broadcast.
           </p>
           <form class="form">
-            <div class="form__display">
-              <fieldset class="form__main-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="What is your name:">
-              </fieldset>
-              <fieldset class="form__main-group">
-                <label for="phone">Phone</label>
-                <input type="number" id="phone" placeholder="Your phone number:">
-              </fieldset>
+            <div class="form__block">
+              <div class="form__input-block">
+                <fieldset class="form__main-group">
+                  <label for="name">Name</label>
+                  <input type="text" id="name" placeholder="What is your name:">
+                </fieldset>
+                <fieldset class="form__main-group">
+                  <label for="phone">Phone</label>
+                  <input type="number" id="phone" placeholder="Your phone number:">
+                </fieldset>
+              </div>
               <button type="submit">Submit</button>
             </div>
             <fieldset class="form__checkbox">
@@ -504,8 +506,8 @@
             <div class="clients__col">
               <div class="clients__txt-block">
                 <div class="clients__title-wrap">
-                  <div class="clients__title-icon clients__title-icon_1"></div>
-                  <h3>Fedosova Maria Konstantinovna</h3>
+                  <div class="clients__title-icon clients__title-icon_2"></div>
+                  <h3>Afanasyev Sergey Alexandrovich</h3>
                 </div>
                 <p class="clients__card-txt">
                   I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
@@ -517,15 +519,15 @@
                 </p>
               </div>
               <div class="card-endnote">
-                <p class="card-endnote__left">40 m2</p>
-                <p class="card-endnote__right">48 DAYS</p>
+                <p class="card-endnote__left">90 m2</p>
+                <p class="card-endnote__right">128 DAYS</p>
               </div>
             </div>
             <div class="clients__col">
               <div class="clients__txt-block">
                 <div class="clients__title-wrap">
-                  <div class="clients__title-icon clients__title-icon_1"></div>
-                  <h3>Fedosova Maria Konstantinovna</h3>
+                  <div class="clients__title-icon clients__title-icon_3"></div>
+                  <h3>Kiriev Egor Leonidovich</h3>
                 </div>
                 <p class="clients__card-txt">
                   I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
@@ -537,8 +539,8 @@
                 </p>
               </div>
               <div class="card-endnote">
-                <p class="card-endnote__left">40 m2</p>
-                <p class="card-endnote__right">48 DAYS</p>
+                <p class="card-endnote__left">56 m2</p>
+                <p class="card-endnote__right">86 DAYS</p>
               </div>
             </div>
           </div>
